# vendor_revoview

./: .gitattributes  001.patch  OAT.xml  README.OpenSource  README.md  README_EN.md  README_zh.md
wukong100/: bundle.json  config.json  ohos.build  product.gni
wukong100/app/: BUILD.gn  FaceNetApp.hap  nfc.hap
wukong100/audio_conf/: BUILD.gn
wukong100/bootanimation/: BUILD.gn
wukong100/default_app_config/: BUILD.gn
wukong100/etc/: BUILD.gn  group  passwd
wukong100/etc/bluetooth/: bt_device_config.xml
wukong100/etc/param/: hardware_wukong100.para  hardware_wukong100.para.template  product_wukong100.para  template_processor.py
wukong100/etc/scb_effect_config/: gesture_navigation_setting.json
wukong100/etc/systemui/: poweroff_config.json
wukong100/hals/audio/: BUILD.gn  alsa_adapter.json  alsa_paths.json
wukong100/hals/codec/: BUILD.gn
wukong100/hdf_config/khdf/: hdf.hcs  hdf_hcs.hcb
wukong100/hdf_config/khdf/device_info/: device_info.hcs
wukong100/hdf_config/khdf/sensor/: sensor_config.hcs
wukong100/hdf_config/khdf/vibrator/: linear_vibrator_config.hcs
wukong100/hdf_config/uhdf/: BUILD.gn  device_info.hcs  hdf.hcs
wukong100/hdf_config/uhdf/media_codec/: codec_component_capabilities.hcs  media_codec_capabilities.hcs
wukong100/image_conf/: BUILD.gn  system_image_conf.txt  userdata_image_conf.txt
wukong100/modules/: BUILD.gn  build_modules.sh
wukong100/modules/unisoc_platform/sprdwcn/: Kbuild  Makefile  sprd_wcn.c  wcn_bus.c
wukong100/modules/unisoc_platform/sprdwcn/boot/: gnss_firmware_bin.h  marlin_firmware_bin.h  wcn_debug_bus.c  wcn_debug_bus.h  wcn_integrate.c  wcn_integrate.h  wcn_integrate_boot.c  wcn_integrate_boot.h  wcn_integrate_dev.c  wcn_integrate_dev.h
wukong100/modules/unisoc_platform/sprdwcn/include/: bus_common.h  marlin3_base_glb.h  marlin_platform.h  sc2342_glb.h  sc2355_glb.h  sprd_wcn.h  sprd_wcn_glb.h  umw2631_integrate_glb.h  umw2652_glb.h  umw2653_glb.h  wcn_dbg.h  wcn_glb.h  wcn_glb_reg.h  wcn_integrate_base_glb.h  wcn_types.h
wukong100/modules/unisoc_platform/sprdwcn/pcie/: edma_engine.c  edma_engine.h  edma_util.c  ioctl.c  ioctl.h  mchn.c  mchn.h  pcie.c  pcie.h  pcie_attach_bus.c  pcie_dbg.c  pcie_dbg.h  pcie_pm.c  pcie_pm.h
wukong100/modules/unisoc_platform/sprdwcn/platform/: bufring.c  bufring.h  gnss_dump.c  gnss_dump.h  loopcheck.c  loopcheck.h  mdbg_type.h  mem_pd_mgr.c  mem_pd_mgr.h  reset.c  reset.h  reset_test.c  sysfs.c  sysfs.h  wcn_boot.c  wcn_boot.h  wcn_ca_trusty.c  wcn_ca_trusty.h  wcn_chr.c  wcn_chr.h  wcn_debugfs.c  wcn_dump.c  wcn_dump.h  wcn_dump_integrate.c  wcn_dump_integrate.h  wcn_gnss.h  wcn_gnss_dump.c  wcn_gnss_dump.h  wcn_log.c  wcn_log.h  wcn_misc.c  wcn_misc.h  wcn_op.c  wcn_op.h  wcn_parn_parser.c  wcn_parn_parser.h  wcn_pm_qos.c  wcn_procfs.c  wcn_procfs.h  wcn_swd_dap.c  (+3 more)
wukong100/modules/unisoc_platform/sprdwcn/platform/gnss/: gnss.c  gnss.h  gnss_common.h
wukong100/modules/unisoc_platform/sprdwcn/platform/rf/: rf.c  rf.h
wukong100/modules/unisoc_platform/sprdwcn/sdio/: sdiohal.h  sdiohal_common.c  sdiohal_if.c  sdiohal_main.c  sdiohal_rx.c  sdiohal_tx.c
wukong100/modules/unisoc_platform/sprdwcn/sipc/: wcn_sipc.c  wcn_sipc.h
wukong100/modules/unisoc_platform/sprdwcn/sleep/: sdio_int.c  slp_dbg.h  slp_mgr.c  slp_mgr.h  slp_sdio.c  slp_sdio.h  slp_test.c
wukong100/modules/wcn/: wifi_board_config_aa.ini
wukong100/modules/wcn/bluetooth/driver/: Kbuild
wukong100/modules/wcn/bluetooth/driver/tty-sdio/: lpm.c  lpm.h  rfkill.c  rfkill.h  tty.c  tty.h  unisoc_bt_log.h
wukong100/modules/wcn/bluetooth/driver/tty-sdio/alignment/: sitm.c  sitm.h
wukong100/modules/wcn/bluetooth/hal/: BUILD.gn
wukong100/modules/wcn/bluetooth/hal/conf/sprd/marlin3_lite/include/: vnd_buildcfg.h
wukong100/modules/wcn/bluetooth/hal/conf/sprd/marlin3_lite/src/: marlin3_lite.c
wukong100/modules/wcn/bluetooth/hal/include/: bt_hci_bdroid.h  bt_target.h  bt_vendor_sprd.h  bt_vendor_sprd_hci.h  bt_vendor_sprd_ssp.h  bt_vendor_ssp_lib.h  bt_vendor_types.h  conf.h  userial_vendor.h  vnd_buildcfg.h
wukong100/modules/wcn/bluetooth/hal/include/utils/: Log.h
wukong100/modules/wcn/bluetooth/hal/src/: bt_vendor_sprd.c  bt_vendor_sprd_hci.c  bt_vendor_sprd_ssp.c  conf.c  hardware.c  sitm.c  upio.c  userial_vendor.c
wukong100/modules/wcn/firmware/: BUILD.gn
wukong100/modules/wcn/include/: mchn.h  wcn_bus.h  wcn_integrate_platform.h
wukong100/modules/wcn/wlan/wlan_combo/: Kbuild
wukong100/modules/wcn/wlan/wlan_combo/common/: acs.h  apf.c  apf.h  cfg80211.c  cfg80211.h  channel_2g.h  channel_5g.h  chip_ops.h  chr.c  chr.h  cmd.h  common.h  debug.c  debug.h  delay_work.c  delay_work.h  hif.h  iface.c  iface.h  msg.c  msg.h  npi.c  npi.h  qos.h  report.c  report.h  sprd_wlan.c  tcp_ack.h  tdls.c  tdls.h  vendor.h  wifi_config.c
wukong100/modules/wcn/wlan/wlan_combo/sc2332/: acs.c  cmdevt.c  cmdevt.h  fcc.c  fcc.h  init.c  qos.c  qos.h  scan.c  scan.h  sdio.c  sipc.c  tcp_ack.c  txrx.c  txrx.h  vendor.c  wapi.c  wapi.h
wukong100/modules/wcn/wlan/wlan_combo/sc2355/: acs.c  api_version.c  cmdevt.c  cmdevt.h  cpu_performance.c  cpu_performance.h  defrag.c  defrag.h  dfs.c  dfs.h  fcc.c  fcc.h  hw_param.c  hw_param.h  hw_sipc_param.c  hw_sipc_param.h  init.c  mm.c  mm.h  pcie.c  pcie.h  pcie_buf.c  pcie_buf.h  qos.c  qos.h  reorder.c  reorder.h  rtt.c  rtt.h  rx.c  rx.h  sc2355_intf.h  scan.c  scan.h  sdio.c  sdio.h  sipc.c  sipc.h  sipc_buf.c  sipc_buf.h  (+5 more)
wukong100/modules/wcn/wlan/wlan_combo/sc2355/pamwifi/: pamwifi_core.c
wukong100/modules/wcn/wlan/wlan_combo/sc2355/pamwifi/r2p0/: r2p0.c
wukong100/preinstall-config/: BUILD.gn  install_list.json  install_list_capability.json  install_list_permissions.json
wukong100/resourceschedule/: BUILD.gn
wukong100/resourceschedule/cgroup_sched/: resource_schedule_vendor.cfg
wukong100/resourceschedule/soc_perf/: socperf_boost_config.xml  socperf_resource_config.xml
wukong100/security_config/: high_privilege_process_list.json  sanitizer_check_list.gni
wukong100/window_config/: BUILD.gn  display_manager_config.xml  window_manager_config.xml
(+9 files in other folders)
