# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

action("generate_hardware_para") {
  script = "./param/template_processor.py"
  outputs = [ "$root_build_dir/obj/vendor/revoview/wukong100/etc/param/hardware_wukong100.para" ]
}

ohos_prebuilt_etc("para_for_chip_prod") {
  deps = [ ":generate_hardware_para" ]
  sources = get_target_outputs(":generate_hardware_para")
  source = sources[0]
  install_images = [ chip_prod_base_dir, chipset_base_dir ]
  relative_install_dir = "param"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_sys_prod") {
  source = "./param/product_wukong100.para"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir = "param"
  part_name = "product_wukong100"
}

group("product_etc_conf") {
  deps = [
    ":generate_hardware_para",
    ":para_for_chip_prod",
    ":para_for_sys_prod",
  ]
}
