# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

action("generate_hardware_para") {
  script = "./param/template_processor.py"
  outputs = [ "$root_build_dir/obj/vendor/revoview/wukong100/etc/param/hardware_wukong100.para" ]
}

ohos_prebuilt_etc("para_for_chip_prod") {
  deps = [ ":generate_hardware_para" ]
  sources = get_target_outputs(":generate_hardware_para")
  source = sources[0]
  install_images = [ chip_prod_base_dir, chipset_base_dir ]
  relative_install_dir = "param"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_sys_prod") {
  source = "./param/product_wukong100.para"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir = "param"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_synchronized") {
  source = "./ringtones/紧急.json"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/haptics/standard/synchronized/alarms/"
  part_name = "product_wukong100"
}


ohos_prebuilt_etc("para_for_gentle") {
  source = "./gentle/紧急.json"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/haptics/standard/synchronized/notifications/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_variant") {
  source = "./notifications/Tune.ogg"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/audio/notifications/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_variant_win") {
  source = "./notifications/win.ogg"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/audio/notifications/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_animationsounds") {
  source = "./animationsounds/提示.ogg"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/audio/animationsounds/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_alarms") {
  source = "./alarms/唯一.ogg"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/audio/alarms/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_ringtones") {
  source = "./ringtones/下雨.ogg"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/audio/ringtones/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_ui") {
  source = "./ui/提示.ogg"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/audio/ui/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_non-synchronized") {
  source = "./variant/紧急.json"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/haptics/gentle/non-synchronized/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_standard") {
  source = "./animationsounds/紧急.json"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/haptics/standard/non-synchronized/"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_notifications") {
  source = "./alarms/紧急.json"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/haptics/gentle/synchronized/notifications/"
  part_name = "product_wukong100"
}


ohos_prebuilt_etc("para_for_haptics") {
  source = "./ui/紧急.json"
  install_images = [ sys_prod_base_dir ]
  relative_install_dir= "../variant/region_comm/china/resource/media/haptics/standard/synchronized/ringtones/"
  part_name = "product_wukong100"
}

 ohos_prebuilt_etc("custom_param") {
    source = "./param/phone.para"
    relative_install_dir = "param"
    part_name = "product_wukong100"
  }


ohos_prebuilt_etc("passwd") {
  source = "./passwd"
  install_images = [
    "system",
    "updater",
  ]
  part_name = "product_wukong100"
  subsystem_name = "product_wukong100"
}

ohos_prebuilt_etc("group") {
  source = "./group"
  install_images = [
    "system",
    "updater",
  ]
  part_name = "product_wukong100"
  subsystem_name = "product_wukong100"
}

ohos_prebuilt_etc("Settings_OpenSource_config") {
  source = "./noticeFile/Settings_OpenSource.html"
  relative_install_dir = "noticeFile"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("poweroff_config_config") {
  source = "./systemui/poweroff_config.json"
  relative_install_dir = "systemui"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("gesture_navigation_setting_config") {
  source = "./scb_effect_config/gesture_navigation_setting.json"
  relative_install_dir = "scb_effect_config"
  part_name = "product_wukong100"
}

ohos_prebuilt_etc("product_bt_device_config") {
  source = "./bluetooth/bt_device_config.xml"
  relative_install_dir = "bluetooth"
  part_name = "product_wukong100"
  subsystem_name = "product_wukong100"
}

ohos_prebuilt_etc("para_for_lib") {
  source = "./lib/libsprd7885_tele_adapter_1.0.z.so"
  install_images = [ vendor_base_dir ]
  relative_install_dir= "lib64"
  part_name = "product_wukong100"
}

group("product_etc_conf") {
  deps = [
    ":generate_hardware_para",
    ":para_for_chip_prod",
    ":para_for_sys_prod",
    ":passwd",
    ":group",
    ":Settings_OpenSource_config",
    ":gesture_navigation_setting_config",
    ":poweroff_config_config",
    ":para_for_variant",
    ":para_for_animationsounds",
    ":para_for_alarms",
    ":para_for_ui",
    ":para_for_non-synchronized",
    ":para_for_standard",
    ":para_for_notifications",
    ":para_for_synchronized",
    ":para_for_ringtones",
    ":para_for_gentle",
    ":para_for_haptics",
    ":product_bt_device_config",
    ":para_for_lib",
    ":para_for_variant_win",
    ":custom_param"
  ]
}
