# Copyright (c) 2023 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")
module_source_dir = "//vendor/$product_company/$product_name/modules"
closed_module_source_dir = "//unisoc_p7885_property/modules"
common_source_dir = "//device/soc/unisoc/p7885/"

action("build_modules") {
  script = "build_modules.sh"
  sources = [ module_source_dir ]
  sources += [ "//kernel_unisoc_p7885" ]
  outputs = [ "$root_build_dir/modules" ]
  outputs += [ "$root_build_dir/modules/sprdbt_tty/sprdbt_tty.ko" ]
  outputs += [ "$root_build_dir/modules/sprd_wlan_combo/sprd_wlan_combo.ko" ]

  outputs += [ "$root_build_dir/modules/mali_kbase/mali_kbase.ko" ]
  outputs += [ "$root_build_dir/modules/prox_with_ldo/prox_with_ldo.ko" ]
  ### spr_wcn
  outputs += [ "$root_build_dir/modules/sprdwcn/unisoc_wcn_bsp.ko" ]
  ### sprd_gnss
  outputs += [ "$root_build_dir/modules/unisoc_gnss_common_ctl_all/unisoc_gnss_common_ctl_all.ko" ]
  outputs += [ "$root_build_dir/modules/unisoc_gnss_dbg/unisoc_gnss_dbg.ko" ]
  outputs += [ "$root_build_dir/modules/unisoc_gnss_pmnotify_ctl/unisoc_gnss_pmnotify_ctl.ko" ]

  outputs += [ "$root_build_dir/modules/gslx680/gslx680.ko" ]
  outputs += [ "$root_build_dir/modules/vpu/vpu.ko" ]
  outputs += [ "$root_build_dir/modules/npu_img_vha/npu_img_vha.ko" ]
  outputs += [ "$root_build_dir/modules/sprd_vdsp/sprd_vdsp.ko" ]
  outputs += [ "$root_build_dir/modules/ws73/sle/output/bin/plat_soc.ko" ]
  outputs += [ "$root_build_dir/modules/ws73/sle/output/bin/sle_soc.ko" ]
  outputs += [ "$root_build_dir/modules/ws73/sle/output/bin/ws73_cfg.ini" ]
  deps = [ "//device/board/$product_company/$product_name/kernel:kernel" ]
  args = [
    rebase_path(module_source_dir, root_build_dir),
    rebase_path(root_build_dir),
    rebase_path(module_source_dir),
    rebase_path(common_source_dir),
    rebase_path(closed_module_source_dir),
  ]
}

ohos_prebuilt_executable("sprdbt_tty") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/sprdbt_tty/sprdbt_tty.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_etc("wcnmodem") {
  source = "$closed_module_source_dir/wcn/wcnmodem.bin"
  module_install_dir = "firmware"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_executable("gnssmodem") {
  source = "$closed_module_source_dir/wcn/gnssmodem.bin"
  module_install_dir = "firmware"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_executable("wifi_board_config") {
  source = "$closed_module_source_dir/wcn/wifi_board_config.ini"
  module_install_dir = "firmware"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_etc("bt_configure_pskey_aa") {
  source = "$closed_module_source_dir/wcn/bt_configure_pskey_aa.ini"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("bt_configure_rf_aa") {
  source = "$closed_module_source_dir/wcn/bt_configure_rf_aa.ini"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("bt_configure_pskey") {
  source = "$closed_module_source_dir/wcn/bt_configure_pskey.ini"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("bt_configure_rf") {
  source = "$closed_module_source_dir/wcn/bt_configure_rf.ini"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("regulatory.db") {
  source = "$closed_module_source_dir/wcn/regulatory.db"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_etc("regulatory.db.p7s") {
  source = "$closed_module_source_dir/wcn/regulatory.db.p7s"
  part_name = "product_wukong100"
  install_images = [ chipset_base_dir ]
  install_enable = true
}

ohos_prebuilt_executable("sprd_wlan_combo") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/sprd_wlan_combo/sprd_wlan_combo.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("mali_kbase") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/mali_kbase/mali_kbase.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

###### sprd_gnss
ohos_prebuilt_executable("unisoc_gnss_common_ctl_all") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/unisoc_gnss_common_ctl_all/unisoc_gnss_common_ctl_all.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("unisoc_gnss_dbg") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/unisoc_gnss_dbg/unisoc_gnss_dbg.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("unisoc_gnss_pmnotify_ctl") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/unisoc_gnss_pmnotify_ctl/unisoc_gnss_pmnotify_ctl.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("unisoc_wcn_bsp") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/sprdwcn/unisoc_wcn_bsp.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("gslx680") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/gslx680/gslx680.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("vpu") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/vpu/vpu.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("npu_img_vha") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/npu_img_vha/npu_img_vha.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("sprd_vdsp") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/sprd_vdsp/sprd_vdsp.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("plat_soc") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/ws73/sle/output/bin/plat_soc.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("sle_soc") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/ws73/sle/output/bin/sle_soc.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("ws73_cfg") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/ws73/sle/output/bin/ws73_cfg.ini"
  module_install_dir = "etc/firmware"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("ws73") {
  deps = [ ":build_modules" ]
  source = "$closed_module_source_dir/ws73/sle/firmware/e/ws73.bin"
  module_install_dir = "etc/firmware"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("btc_cali") {
  deps = [ ":build_modules" ]
  source = "$closed_module_source_dir/ws73/sle/firmware/e/btc_cali.bin"
  module_install_dir = "etc/firmware"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("wifi_cali") {
  deps = [ ":build_modules" ]
  source = "$closed_module_source_dir/ws73/sle/firmware/e/wifi_cali.bin"
  module_install_dir = "etc/firmware"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("wow") {
  deps = [ ":build_modules" ]
  source = "$closed_module_source_dir/ws73/sle/firmware/e/wow.bin"
  module_install_dir = "etc/firmware"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

ohos_prebuilt_executable("prox_with_ldo") {
  deps = [ ":build_modules" ]
  source = "$root_build_dir/modules/prox_with_ldo/prox_with_ldo.ko"
  module_install_dir = "modules"
  install_images = [ chipset_base_dir ]
  part_name = "product_wukong100"
  install_enable = true
}

group("modules") {
  deps = [
    ### sprdwcn
    ":unisoc_wcn_bsp",
    ###
    ":unisoc_gnss_common_ctl_all",
    ":unisoc_gnss_dbg",
    ":unisoc_gnss_pmnotify_ctl",
    ":sprd_wlan_combo",
    ":sprdbt_tty",
    ":wcnmodem",
    ":gnssmodem",
    ":wifi_board_config",
    ":bt_configure_pskey",
    ":bt_configure_rf",
    ":bt_configure_pskey_aa",
    ":bt_configure_rf_aa",
    ":regulatory.db",
    ":regulatory.db.p7s",
    ":mali_kbase",
    ":gslx680",
    ":vpu",
    ":npu_img_vha",
    ":sprd_vdsp",
    ":plat_soc",
    ":sle_soc",
    ":ws73_cfg",
    ":ws73",
    ":btc_cali",
    ":wifi_cali",
    ":wow",
    ":prox_with_ldo",
  ]
}
